# cdviz-collector

./: .conflict-files  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .markdownlint.yaml  .mega-linter.yml  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSING.md  README.md  biome.json  deny.toml  dist-workspace.toml  docker-bake.hcl  mise.toml  release-plz.toml  rust-toolchain.toml
.auto-resolution/: .mise.toml  Cargo.toml  Dockerfile  deny.toml  docker-bake.hcl
.auto-resolution/.github/: PULL_REQUEST_TEMPLATE.md
.auto-resolution/.github/workflows/: release.yml
.auto-resolution/src/: main.rs  utils.rs
.auto-resolution/src/pipes/: passthrough.rs
.auto-resolution/src/sinks/: debug.rs  folder.rs
.auto-resolution/src/sources/kafka/: config.rs
.auto-resolution/src/sources/opendal/: filter.rs
.auto-resolution/src/tools/: connect.rs  mod.rs  send.rs
.auto-resolution/tests/testkit/: cdevent_utils.rs
.cargo/: config.toml
.conflict-base-0/: .mega-linter.yml  Dockerfile  LICENSING.md  dist-workspace.toml
.conflict-base-0/config/transformers/: kubewatch_cloudevents.vrl
.conflict-base-0/src/security/: rule.rs
.conflict-base-0/src/sinks/: db.rs
.conflict-base-0/src/tools/: difference.rs  ui.rs
.conflict-base-0/tests/: integration_send_command.rs
.conflict-base-0/tests/testkit/: connector_chain.rs
.conflict-side-0/: CLAUDE.md
.conflict-side-0/.cargo/: config.toml
.conflict-side-0/src/: cdevent_utils.rs  http.rs  message.rs
.conflict-side-0/src/pipes/: collect_to_vec.rs  log.rs
.conflict-side-0/src/security/: mod.rs
.conflict-side-0/src/sources/: mod.rs
.conflict-side-0/tests/: integration_chain_kafka.rs
.conflict-side-1/: Cargo.toml  Dockerfile
.conflict-side-1/src/sources/kafka/: mod.rs
.conflict-side-1/tests/: integration_chain_folder_opendal.rs  integration_webhook_http_sink.rs
.conflict-side-1/transformers/github_events/: transformer.vrl
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/workflows/: ci.yml  mega-linter.yml  mega-linter.yml.disabled  release-after.yml  release-build-setup.yml.part  release-plz.yml  release.yml  try-build-on.yml
.sqlx/: query-d5331719cef6e3191f9adb99d2395d8a3f7d06ed25c0cf24209ca62d55cba0d5.json
config/transformers/: argocd_notifications.vrl  github_events.vrl  kubewatch_cloudevents.vrl
docs/adr/: 0001-historical-backfill-and-pagination-strategy.md  0002-multi-pass-http-polling-request-driver.md
examples/assets/: cdevents.info.md  cdviz-collector.toml  cnv_github_events.vrl  github_event.http  kubewatch_cloudevents.http
examples/assets/transformers/: junit_to_cdevent.vrl
skill/: SKILL.md
skill/references/: config-examples.md  vrl-patterns.md
src/: config.rs  connect.rs  errors.rs  event.rs  http.rs  lib.rs  main.rs  message.rs  otel.rs  pipeline.rs  state.rs  utils.rs
src/assets/: cdviz-collector.base.toml  connect.base.toml  send.base.toml
src/config/: mod.rs  remote_file_adapter.rs  toml_provider.rs
src/pipes/: collect_to_vec.rs  passthrough.rs
src/reqwest_eventsource/: error.rs  event_source.rs  mod.rs  retry.rs
src/security/: header.rs  mod.rs  rule.rs  signature.rs
src/sinks/: clickhouse.rs  db.rs  debug.rs  folder.rs  http.rs  kafka.rs  mod.rs  nats.rs  retry.rs  sse.rs
src/sources/: cli.rs  extractors.rs  format_converters.rs  mod.rs  parsers.rs  send_cdevents.rs  webhook.rs
src/sources/cli/: mod.rs  parsers.rs
src/sources/format_converters/: tap.rs
src/sources/http_polling/: README.md  filter.rs  mod.rs  request.rs  retry_after_middleware.rs
src/sources/kafka/: config.rs  mod.rs
src/sources/nats/: config.rs  mod.rs
src/sources/opendal/: filter.rs  mod.rs  parsers.rs  resource.rs
src/sources/snapshots/: cdviz_collector__sources__format_converters__tests__parse_tap_no_plan.snap  cdviz_collector__sources__format_converters__tests__parse_tap_plan_at_end.snap  cdviz_collector__sources__format_converters__tests__parse_tap_simple.snap  cdviz_collector__sources__format_converters__tests__parse_tap_with_comments.snap  cdviz_collector__sources__format_converters__tests__parse_tap_with_directives.snap  cdviz_collector__sources__format_converters__tests__parse_tap_with_yaml_diagnostics.snap  cdviz_collector__sources__format_converters__tests__parse_yaml_array.snap  cdviz_collector__sources__format_converters__tests__parse_yaml_nested_structure.snap  cdviz_collector__sources__format_converters__tests__parse_yaml_simple_object.snap  cdviz_collector__sources__parsers__tests__parse_tap_no_plan.snap  cdviz_collector__sources__parsers__tests__parse_tap_plan_at_end.snap  cdviz_collector__sources__parsers__tests__parse_tap_simple.snap  cdviz_collector__sources__parsers__tests__parse_tap_with_comments.snap  cdviz_collector__sources__parsers__tests__parse_tap_with_directives.snap  cdviz_collector__sources__parsers__tests__parse_tap_with_yaml_diagnostics.snap  cdviz_collector__sources__parsers__tests__parse_yaml_array.snap  cdviz_collector__sources__parsers__tests__parse_yaml_nested_structure.snap  cdviz_collector__sources__parsers__tests__parse_yaml_simple_object.snap
src/sources/sse/: config.rs  mod.rs
src/sources/subprocess/: mod.rs
src/sources/transformers/: hbs.rs  mod.rs  vrl.rs  vrl_purl.rs
src/sources/webhook/: mod.rs  signature.rs
src/tools/: config.rs  connect.rs  difference.rs  mod.rs  send.rs  transform.rs  ui.rs
src/transformers/: collect_to_vec.rs  deduplicate.rs  log.rs  mod.rs  passthrough.rs  vrl.rs  vrl_purl.rs
testkit/: Cargo.toml
testkit/src/: README.md  connector_chain.rs  lib.rs  shared_async_resource.rs  testcontainers_nats.rs  testcontainers_redpanda.rs
tests/: integration_chain_folder_opendal.rs  integration_chain_http_webhook.rs  integration_chain_kafka.rs  integration_chain_nats.rs  integration_send_command.rs  integration_send_run_command.rs  integration_webhook_http_sink.rs
tests/assets/config_samples/: sample_chart.toml
tests/assets/db/: schema.sql
tests/testkit/: mod.rs
transformers/argocd_notifications/: transformer.vrl
transformers/github_events/: transformer.vrl
(+174 files in other folders)
