[package]
name = "cdviz-collector"
version = "0.19.7"
edition = "2024"
description = "A service and CLI tool for collecting SDLC/CI/CD events and dispatching them as CDEvents"
homepage = "https://cdviz.dev"
repository = "https://github.com/cdviz-dev/cdviz-collector"
license = "Apache-2.0"
keywords = ["cd", "cdevents", "sdlc"]
categories = []
publish = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]  # auto-registered and used at runtime

[workspace]
members = ["testkit"]

[[bin]]
doc = false
name = "cdviz-collector"
path = "src/main.rs"

[features]
## default is "full" feature set
default = [
  "config_remote",
  "sink_all",
  "source_all",
  "tool_transform",
  "transformer_vrl",
]
#! ### Configuration
config_remote = ["dep:opendal"]
#! ### Sinks
sink_all = ["sink_db", "sink_folder", "sink_http", "sink_kafka", "sink_sse"]
sink_db = ["dep:sqlx"]
sink_folder = ["dep:opendal"]
sink_http = [
  "dep:reqwest",
  "dep:reqwest-middleware",
  "dep:reqwest-retry",
  "dep:reqwest-tracing",
  # reqwest is also used as transitive dependencies
  "reqwest/charset",
  "reqwest/http2",
  "reqwest/json",
  "reqwest/rustls-tls",
]
sink_kafka = ["dep:rdkafka"]
sink_sse = ["dep:tokio-stream"]
#! ### Sources
source_all = ["source_kafka", "source_opendal", "source_sse"]
source_kafka = ["dep:rdkafka"]
source_opendal = ["dep:bytes", "dep:csv", "dep:globset", "dep:opendal"]
source_sse = ["dep:reqwest-eventsource", "dep:uuid"]
tool_transform = ["source_opendal", "tool_ui", "transformer_vrl"]
#! ### Tools
tool_ui = ["dep:cliclack", "dep:console", "dep:similar"]
#! ### Transformers
transformer_vrl = ["dep:vrl"]

[dependencies]
axum = "0.8"
axum-tracing-opentelemetry = "0.32"
base64 = "0.22"
bytes = { version = "1", optional = true }
cdevents-sdk = { version = "0.2", features = ["cloudevents"] }
cid = "0.11"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "3"
cliclack = { version = "0.3", optional = true }
cloudevents-sdk = { version = "0.9", features = ["http-binding"] }
console = { version = "0.16", optional = true }  # compatible version with cliclack
csv = { version = "1", optional = true }
derive_more = { version = "2", features = [
  "debug",
  "display",
  "error",
  "from",
] }
enum_dispatch = "0.3"
faster-hex = "0.10"
figment = { version = "0.10", features = ["env"] }
figment_file_provider_adapter = "0.1"
futures = "0.3"
globset = { version = "0.4", optional = true }
hmac = "0.12"
humantime-serde = "1"
init-tracing-opentelemetry = { version = "0.34", features = [
  "logfmt",
  "otlp",
  "tracing_subscriber_ext",
] }
jiff = { version = "0.2", features = ["serde"] }
miette = { version = "7", features = ["fancy"] }
multihash = "0.19"
opendal = { version = "0.55", default-features = false, features = [
  "services-fs",  # "services-ftp",
  "services-gcs",
  "services-github",
  "services-http",
  "services-s3",
  "services-sftp",
], optional = true }
opentelemetry = "0.31"
packageurl = "0.6"
rdkafka = { version = "0.38", default-features = false, features = [
  "cmake-build",
  "libz-static",
  "ssl-vendored",
  "static-linking",
  "tokio",
], optional = true }
regex = "1"
reqwest = { version = "0.12", default-features = false, optional = true }
reqwest-eventsource = { version = "0.6", optional = true }
reqwest-middleware = { version = "0.4", features = ["json"], optional = true }
reqwest-retry = { version = "0.8", optional = true }
reqwest-tracing = { version = "0.5", optional = true }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
similar = { version = "2", features = ["inline", "unicode"], optional = true }
sqlx = { version = "0.8", default-features = false, features = [
  "json",
  "macros",
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls",
], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "compression-full",
  "cors",
  "decompression-full",
  "sensitive-headers",
  "timeout",
  "validate-request",
] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-opentelemetry-instrumentation-sdk = { version = "0.32" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1", optional = true }
vrl = { version = "0.29", default-features = false, features = [
  "compiler",
  "core",
  "diagnostic",
  "parser",
  "path",
  "stdlib",
  "value",
], optional = true }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[dev-dependencies]
assert2 = "0.3"
cdevents-sdk = { version = "0.2", features = ["testkit"] }
cdviz-collector-testkit = { path = "testkit" }
figment = { version = "0.10", features = ["env", "test"] }
indoc = "2"
pretty_assertions = "1"
proptest = "1"
reqwest-eventsource = "0.6"
rstest = "0.26"
tempfile = "3"
test-strategy = "0.4"
test-trace = "0.3"
testcontainers = "0.26"  # version linked to testcontainers-*
# testcontainers-redpanda-rs = "0.12" # vendored into testkit
# time = "=0.3.39" # HACK explicit fix version (not used) to avoid compilation errors on domain #see https://github.com/NLnetLabs/domain/issues/502
tower = { version = "0.5", features = ["util"] }
uuid = "1"
wiremock = "0.6"

[lints.clippy]
cargo = { level = "allow", priority = -1 }  # not published as crate
dbg_macro = "warn"
decimal_literal_representation = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "allow"
large_include_file = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
# min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

[lints.rust]
deprecated = "warn"
missing_docs = "allow"  # not published as crate
unsafe_code = "forbid"
warnings = "deny"

[profile.release]
strip = "symbols"  # "none", "debuginfo", "symbols"
lto = "thin"  # see https://doc.rust-lang.org/cargo/reference/profiles.html#lto
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
