[package]
name = "cdviz-collector-testkit"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
# assert2 = "0.3"
cdevents-sdk = { version = "0.2", features = ["testkit"] }
cdviz-collector = { path = ".." }
# figment = { version = "0.10", features = ["env", "test"] }
indoc = "2"
miette = { version = "7", features = ["fancy"] }
# pretty_assertions = "1"
proptest = "1"
# reqwest-eventsource = "0.6"
# rstest = "0.26"
serde_json = "1"
tempfile = "3"
# test-strategy = "0.4"
# test-trace = "0.3"
testcontainers = "0.26"
# testcontainers-redpanda-rs = "0.12"
# time = "=0.3.39"                                           # HACK explicit fix version (not used) to avoid compilation errors on domain #see https://github.com/NLnetLabs/domain/issues/502
# tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# uuid = "1"
# wiremock = "0.6"
